# web-server-project

./: Dockerfile  docker-compose.yml  pyproject.toml
server/: models.py  serializers.py  urls.py  views.py
server/migrations/: 0001_initial.py  0002_remove_category_image_alter_category_description_and_more.py  0003_alter_category_id_alter_item_id.py  0004_auto_20230901_1919.py
templates/: base.html  item_form.html  items.html
templates/registration/: login.html  register.html
web_project/: settings.py  urls.py
